Task 5/propdev-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  namespace: propdevelopment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
        tier: public
    spec:
      containers:
      - name: front-end
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end-api
  namespace: propdevelopment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-end-api
  template:
    metadata:
      labels:
        app: back-end-api
        tier: api
    spec:
      containers:
      - name: back-end-api
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-front-end
  namespace: propdevelopment
  labels:
    app: admin-front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-front-end
  template:
    metadata:
      labels:
        app: admin-front-end
        tier: internal
    spec:
      containers:
      - name: admin-front-end
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-back-end-api
  namespace: propdevelopment
  labels:
    app: admin-back-end-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-back-end-api
      tier: secure
  template:
    metadata:
      labels:
        app: admin-back-end-api
        tier: secure
    spec:
      containers:
      - name: admin-back-end-api
        image: nginx
        ports:
        - containerPort: 80
