Task 5/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-back-end-api-isolation
  namespace: propdevelopment
spec:
  podSelector:
    matchLabels:
      app: admin-back-end-api
      tier: secure
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: admin-front-end
